# ChangeLog for net-libs/wt
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/wt/ChangeLog,v 1.7 2012/01/21 06:34:38 mattm Exp $

  21 Jan 2012; Matthew Marlowe <mattm@gentoo.org> wt-3.2.0-r1.ebuild:
  Unmasking major bump to wt-3.2.0-r1 based on successful reports and no open
  bugs, keyword testing ~amd64 and ~x86

*wt-3.2.0-r1 (09 Jan 2012)

  09 Jan 2012; Matthew Marlowe <mattm@gentoo.org> +wt-3.2.0-r1.ebuild:
  Partial fix for bug #397753, 3.2.0 does not include AUTHORS file in docs.

*wt-3.2.0 (05 Jan 2012)

  05 Jan 2012; Matthew Marlowe <mattm@gentoo.org> +wt-3.2.0.ebuild:
  first draft of wt 3.2.0 ebuild - it is temporarily masked until all major
  bugs resolved

  05 Jan 2012; Matthew Marlowe <mattm@gentoo.org> wt-3.1.5.ebuild,
  wt-3.1.6.ebuild, wt-3.1.7.ebuild, metadata.xml:
  Moving package mask from profile to ebuilds in preparation for taking over
  package - hope to bump to latest 3.2 release soon - will review all open bugs

*wt-3.1.7 (20 Dec 2010)

  20 Dec 2010; Peter Volkov <pva@gentoo.org> +wt-3.1.7.ebuild:
  Version bump, thank Nikoli for this job.

*wt-3.1.6 (06 Nov 2010)

  06 Nov 2010; Peter Volkov <pva@gentoo.org> +wt-3.1.6.ebuild:
  Version bump, bug 344001, thank José Romildo Malaquias for report and
  Nikoli for this job.

*wt-3.1.5 (14 Oct 2010)

  14 Oct 2010; Peter Volkov <pva@gentoo.org> +wt-3.1.5.ebuild,
  +files/wt-fix-automagic.patch, +metadata.xml:
  Initial import, the dependency of future releases of the eiskaltdcpp,
  thank Nikoli for this job.
