@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/wt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/wt/ChangeLog,v 1.7 2012/01/21 06:34:38 mattm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/wt/ChangeLog,v 1.8 2012/04/05 15:10:50 mattm Exp $
+
+  05 Apr 2012; Matthew Marlowe <mattm@gentoo.org> -wt-3.1.5.ebuild,
+  -wt-3.1.6.ebuild, -wt-3.1.7.ebuild, -wt-3.2.0.ebuild:
+  remove deprecated ebuilds
 
   21 Jan 2012; Matthew Marlowe <mattm@gentoo.org> wt-3.2.0-r1.ebuild:
   Unmasking major bump to wt-3.2.0-r1 based on successful reports and no open
